@@ -15,6 +15,7 @@ import java.util.concurrent.ConcurrentHashMap;
  * @Date 2021/6/18 11:06 上午
  * @Version 1.0
  */
+@SuppressWarnings("rawtypes")
 @Slf4j
 public class AssetProviderFactory {
 
@@ -24,28 +25,31 @@ public class AssetProviderFactory {
     /**
      * Map<String instanceType, ArrayListMultimap<String assetType, SimpleAssetProvider>>
      */
-    private static final Map<String, ArrayListMultimap<String, SimpleAssetProvider>> context = new ConcurrentHashMap<>();
+    private static final Map<String, ArrayListMultimap<String, SimpleAssetProvider>> CONTEXT = new ConcurrentHashMap<>();
 
     public static <T extends SimpleAssetProvider> T getProvider(String instanceType, String assetType) {
-        if (context.containsKey(instanceType))
-            return CastUtils.cast(context.get(instanceType).get(assetType).get(0));
+        if (CONTEXT.containsKey(instanceType)) {
+            return CastUtils.cast(CONTEXT.get(instanceType).get(assetType).getFirst());
+        }
         return null;
     }
 
     public static <T extends SimpleAssetProvider> List<T> getProviders(String instanceType, String assetType) {
-        if (context.containsKey(instanceType))
-            return CastUtils.cast(context.get(instanceType).get(assetType));
+        if (CONTEXT.containsKey(instanceType)) {
+            return CastUtils.cast(CONTEXT.get(instanceType).get(assetType));
+        }
         return null;
     }
 
     public static <T extends SimpleAssetProvider> void register(T bean) {
-        log.info("AssetProviderFactory注册: beanName = {} , instanceType = {} , assetType = {}", bean.getClass().getSimpleName(), bean.getInstanceType(), bean.getAssetType());
-        if (context.containsKey(bean.getInstanceType())) {
-            context.get(bean.getInstanceType()).put(bean.getAssetType(), bean);
+        if (CONTEXT.containsKey(bean.getInstanceType())) {
+            CONTEXT.get(bean.getInstanceType()).put(bean.getAssetType(), bean);
         } else {
-            ArrayListMultimap<String, SimpleAssetProvider> multimap = ArrayListMultimap.create();
-            multimap.put(bean.getAssetType(), bean);
-            context.put(bean.getInstanceType(), multimap);
+            ArrayListMultimap<String, SimpleAssetProvider> map = ArrayListMultimap.create();
+            map.put(bean.getAssetType(), bean);
+            CONTEXT.put(bean.getInstanceType(), map);
         }
+        log.debug("AssetProviderFactory Registered: beanName={}, instanceType={}, assetType={}", bean.getClass().getSimpleName(), bean.getInstanceType(), bean.getAssetType());
     }
+
 }
