@@ -4,30 +4,32 @@ import com.baiyi.opscloud.common.annotation.SingleTask;
 import com.baiyi.opscloud.common.constants.SingleTaskConstants;
 import com.baiyi.opscloud.common.datasource.DingtalkConfig;
 import com.baiyi.opscloud.common.util.EmailUtil;
+import com.baiyi.opscloud.core.comparer.AssetComparer;
+import com.baiyi.opscloud.core.comparer.AssetComparerBuilder;
+import com.baiyi.opscloud.core.exception.DatasourceProviderException;
 import com.baiyi.opscloud.core.factory.AssetProviderFactory;
 import com.baiyi.opscloud.core.model.DsInstanceContext;
-import com.baiyi.opscloud.core.util.AssetUtil;
 import com.baiyi.opscloud.datasource.dingtalk.driver.DingtalkUserDriver;
 import com.baiyi.opscloud.datasource.dingtalk.entity.DingtalkUser;
 import com.baiyi.opscloud.datasource.dingtalk.param.DingtalkUserParam;
 import com.baiyi.opscloud.datasource.dingtalk.provider.base.AbstractDingtalkAssetProvider;
 import com.baiyi.opscloud.domain.DataTable;
+import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceConfig;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceInstanceAsset;
 import com.baiyi.opscloud.domain.generator.opscloud.User;
 import com.baiyi.opscloud.domain.param.datasource.DsAssetParam;
-import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.service.datasource.DsInstanceAssetService;
 import com.baiyi.opscloud.service.user.UserService;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
+import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
 
-import javax.annotation.Resource;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -60,7 +62,7 @@ public class DingtalkUserProvider extends AbstractDingtalkAssetProvider<Dingtalk
     }
 
     private DingtalkConfig.Dingtalk buildConfig(DatasourceConfig dsConfig) {
-        return dsConfigHelper.build(dsConfig, DingtalkConfig.class).getDingtalk();
+        return dsConfigManager.build(dsConfig, DingtalkConfig.class).getDingtalk();
     }
 
     @Override
@@ -77,9 +79,9 @@ public class DingtalkUserProvider extends AbstractDingtalkAssetProvider<Dingtalk
             });
             return entities;
         } catch (Exception e) {
-            log.error("查询钉钉用户错误: {}", e.getMessage());
+            log.error(e.getMessage());
+            throw new DatasourceProviderException(e.getMessage(), e);
         }
-        throw new RuntimeException("查询条目失败!");
     }
 
     private Map<String, DingtalkUser.User> queryAllUserMap(DingtalkConfig.Dingtalk dingtalk, Set<Long> deptIdSet) {
@@ -90,10 +92,16 @@ public class DingtalkUserProvider extends AbstractDingtalkAssetProvider<Dingtalk
                     .build();
             DingtalkUser.UserResponse userResponse = dingtalkUserDriver.list(dingtalk, queryUserPage);
 
-            if (CollectionUtils.isEmpty(userResponse.getResult().getList())) return;
-            Map<String, DingtalkUser.User> userMap = userResponse.getResult().getList().stream().collect(Collectors.toMap(DingtalkUser.User::getUserid, a -> a, (k1, k2) -> k1));
+            if (CollectionUtils.isEmpty(userResponse.getResult().getList())) {
+                return;
+            }
+            Map<String, DingtalkUser.User> userMap = userResponse
+                    .getResult()
+                    .getList()
+                    .stream()
+                    .collect(Collectors.toMap(DingtalkUser.User::getUserid, a -> a, (k1, k2) -> k1));
             allUserMap.putAll(userMap);
-            log.info("查询钉钉用户: 部门ID = {} , 用户总数 = {}", deptId, allUserMap.size());
+            log.info("查询钉钉用户: 部门ID={}, 用户总数={}", deptId, allUserMap.size());
         });
         return allUserMap;
     }
@@ -109,8 +117,9 @@ public class DingtalkUserProvider extends AbstractDingtalkAssetProvider<Dingtalk
                 .length(10000)
                 .build();
         DataTable<DatasourceInstanceAsset> dataTable = dsInstanceAssetService.queryPageByParam(pageQuery);
-        if (CollectionUtils.isEmpty(dataTable.getData()))
+        if (CollectionUtils.isEmpty(dataTable.getData())) {
             return Sets.newHashSet();
+        }
         return dataTable.getData().stream().map(e -> Long.valueOf(e.getAssetId()))
                 .collect(Collectors.toSet());
     }
@@ -120,7 +129,7 @@ public class DingtalkUserProvider extends AbstractDingtalkAssetProvider<Dingtalk
         if (!StringUtils.isEmpty(user.getMobile())) {
             List<User> users = userService.listByPhone(user.getMobile());
             if (!CollectionUtils.isEmpty(users)) {
-                user.setUsername(users.get(0).getUsername());
+                user.setUsername(users.getFirst().getUsername());
                 return;
             }
         }
@@ -132,18 +141,19 @@ public class DingtalkUserProvider extends AbstractDingtalkAssetProvider<Dingtalk
     }
 
     @Override
-    @SingleTask(name = SingleTaskConstants.PULL_DINGTALK_USER, lockTime = "5m")
+    @SingleTask(name = SingleTaskConstants.PULL_DINGTALK_USER, lockTime = "10m")
     public void pullAsset(int dsInstanceId) {
         doPull(dsInstanceId);
     }
 
     @Override
-    protected boolean equals(DatasourceInstanceAsset asset, DatasourceInstanceAsset preAsset) {
-        if (!AssetUtil.equals(preAsset.getName(), asset.getName()))
-            return false;
-        if (preAsset.getIsActive() != asset.getIsActive())
-            return false;
-        return true;
+    protected AssetComparer getAssetComparer() {
+        return AssetComparerBuilder.newBuilder()
+                .compareOfName()
+                .compareOfKey2()
+                .compareOfActive()
+                .compareOfDescription()
+                .build();
     }
 
     @Override
