@@ -1,6 +1,6 @@
 package com.baiyi.opscloud.zabbix.v5.driver;
 
-import com.baiyi.opscloud.common.config.CachingConfiguration;
+import com.baiyi.opscloud.common.configuration.CachingConfiguration;
 import com.baiyi.opscloud.common.datasource.ZabbixConfig;
 import com.baiyi.opscloud.zabbix.v5.driver.base.SimpleZabbixAuth;
 import com.baiyi.opscloud.zabbix.v5.entity.ZabbixHost;
@@ -76,23 +76,24 @@ public class ZabbixV5HostGroupDriver {
         return response.getResult();
     }
 
-    @Cacheable(cacheNames = CachingConfiguration.Repositories.CACHE_1DAY, key = "#config.url + '_v5_hostgroup_groupid_' + #groupid", unless = "#result == null")
+    @Cacheable(cacheNames = CachingConfiguration.Repositories.CACHE_FOR_1D, key = "#config.url + '_v5_hostgroup_groupid_' + #groupid", unless = "#result == null")
     public ZabbixHostGroup.HostGroup getById(ZabbixConfig.Zabbix config, String groupid) {
         ZabbixRequest.DefaultRequest request = ZabbixRequestBuilder.builder()
                 .putParam("groupids", groupid)
                 .build();
         ZabbixHostGroup.QueryHostGroupResponse response = queryHandle(config, request);
-        if (CollectionUtils.isEmpty(response.getResult()))
+        if (CollectionUtils.isEmpty(response.getResult())) {
             return null;
-        return response.getResult().get(0);
+        }
+        return response.getResult().getFirst();
     }
 
-    @CacheEvict(cacheNames = CachingConfiguration.Repositories.CACHE_1DAY, key = "#config.url + '_v5_hostgroup_name_' + #hostGroup.name")
+    @CacheEvict(cacheNames = CachingConfiguration.Repositories.CACHE_FOR_1D, key = "#config.url + '_v5_hostgroup_name_' + #hostGroup.name")
     public void evictHostGroup(ZabbixConfig.Zabbix config, ZabbixHostGroup.HostGroup hostGroup) {
-        log.info("清除ZabbixHostGroup缓存 : name = {}", hostGroup.getName());
+        log.info("Evict cache Zabbix HostGroup: name={}", hostGroup.getName());
     }
 
-    @Cacheable(cacheNames = CachingConfiguration.Repositories.CACHE_1DAY, key = "#config.url + '_v5_hostgroup_name_' + #name", unless = "#result == null")
+    @Cacheable(cacheNames = CachingConfiguration.Repositories.CACHE_FOR_1D, key = "#config.url + '_v5_hostgroup_name_' + #name", unless = "#result == null")
     public ZabbixHostGroup.HostGroup getByName(ZabbixConfig.Zabbix config, String name) {
         ZabbixRequest.DefaultRequest request = ZabbixRequestBuilder.builder()
                 .filter(ZabbixFilterBuilder.builder()
@@ -100,9 +101,10 @@ public class ZabbixV5HostGroupDriver {
                         .build())
                 .build();
         ZabbixHostGroup.QueryHostGroupResponse response = queryHandle(config, request);
-        if (CollectionUtils.isEmpty(response.getResult()))
+        if (CollectionUtils.isEmpty(response.getResult())) {
             return null;
-        return response.getResult().get(0);
+        }
+        return response.getResult().getFirst();
     }
 
     public void create(ZabbixConfig.Zabbix config, String name) {
@@ -111,7 +113,7 @@ public class ZabbixV5HostGroupDriver {
                 .build();
         ZabbixHostGroup.CreateHostGroupResponse response = createHandle(config, request);
         if (CollectionUtils.isEmpty(response.getResult().getGroupids())) {
-            log.error("ZabbixHostGroup创建失败: name = {}", name);
+            log.error("Create Zabbix HostGroup error: name={}", name);
         }
     }
 
