@@ -3,14 +3,15 @@ package com.baiyi.opscloud.zabbix.v5.entity;
 import com.baiyi.opscloud.core.asset.IToAsset;
 import com.baiyi.opscloud.domain.builder.asset.AssetContainer;
 import com.baiyi.opscloud.domain.builder.asset.AssetContainerBuilder;
+import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceInstance;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceInstanceAsset;
-import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.zabbix.v5.entity.base.ZabbixResponse;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import lombok.*;
 import org.springframework.util.CollectionUtils;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
 
@@ -54,7 +55,7 @@ public class ZabbixUser {
     @AllArgsConstructor
     @JsonIgnoreProperties(ignoreUnknown = true)
     public static class User implements IToAsset, Serializable {
-
+        @Serial
         private static final long serialVersionUID = -8414101569080017905L;
         // @JsonProperty("userid")
         private String userid;
@@ -112,8 +113,11 @@ public class ZabbixUser {
                 for (ZabbixMedia.Media media : this.medias) {
                     if ("1".equals(media.getMediatypeid())) {
                         //  String email = ZabbixMapper.mapperList(media.getSendto(), String.class).get(0);
-                        String email = ((List<String>) media.getSendto()).get(0);
-                        builder.paramProperty("email", email);
+                        try {
+                            String email = ((List<String>) media.getSendto()).getFirst();
+                            builder.paramProperty("email", email);
+                        } catch (Exception ignored) {
+                        }
                         continue;
                     }
                     if ("3".equals(media.getMediatypeid())) {
@@ -124,4 +128,5 @@ public class ZabbixUser {
             return builder.build();
         }
     }
+
 }
