@@ -3,15 +3,15 @@ package com.baiyi.opscloud.guacamole.tunnel;
 import com.baiyi.opscloud.domain.param.guacamole.GuacamoleParam;
 import com.baiyi.opscloud.guacamole.protocol.GuacamoleProtocolFactory;
 import com.baiyi.opscloud.guacamole.protocol.IGuacamoleProtocol;
+import jakarta.websocket.EndpointConfig;
+import jakarta.websocket.OnMessage;
+import jakarta.websocket.Session;
 import org.apache.guacamole.GuacamoleException;
 import org.apache.guacamole.net.GuacamoleSocket;
 import org.apache.guacamole.net.GuacamoleTunnel;
 import org.apache.guacamole.net.SimpleGuacamoleTunnel;
 import org.apache.guacamole.websocket.GuacamoleWebSocketTunnelEndpoint;
 
-import javax.websocket.EndpointConfig;
-import javax.websocket.OnMessage;
-import javax.websocket.Session;
 import java.util.List;
 import java.util.Map;
 
@@ -20,7 +20,7 @@ import java.util.Map;
  * @Date 2021/5/21 5:45 下午
  * @Version 1.0
  */
-public class BaseGuacamoleTunnel extends GuacamoleWebSocketTunnelEndpoint {
+public class BaseGuacamoleTunnel  extends GuacamoleWebSocketTunnelEndpoint {
 
     public interface SupportProtocol {
         String KUBERNETES = "kubernetes";
@@ -46,17 +46,18 @@ public class BaseGuacamoleTunnel extends GuacamoleWebSocketTunnelEndpoint {
         GuacamoleParam.Login guacamoleLogin = toGuacamoleLogin(session.getRequestParameterMap());
         IGuacamoleProtocol iGuacamoleProtocol = GuacamoleProtocolFactory.getProtocol(guacamoleLogin.getProtocol());
         GuacamoleSocket socket = iGuacamoleProtocol.buildGuacamoleSocket(guacamoleLogin);
-        return new SimpleGuacamoleTunnel( socket);
+        return new SimpleGuacamoleTunnel(socket);
     }
 
     @Override
-    @OnMessage
+    @OnMessage(maxMessageSize = 1024 * 1024)
     public void onMessage(String message) {
         super.onMessage(message);
     }
 
     protected String getGuacamoleParam(Map<String, List<String>> parameterMap, String key) {
         List<String> params = parameterMap.get(key);
-        return params.get(0);
+        return params.getFirst();
     }
+
 }
