@@ -3,11 +3,11 @@ package com.baiyi.opscloud.facade.datasource.impl;
 import com.baiyi.opscloud.common.constants.enums.DsTypeEnum;
 import com.baiyi.opscloud.common.util.BeanCopierUtil;
 import com.baiyi.opscloud.domain.DataTable;
+import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceInstance;
 import com.baiyi.opscloud.domain.generator.opscloud.DatasourceInstanceAsset;
 import com.baiyi.opscloud.domain.param.datasource.DsAssetParam;
 import com.baiyi.opscloud.domain.param.datasource.DsInstanceParam;
-import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.domain.vo.datasource.DsAssetVO;
 import com.baiyi.opscloud.domain.vo.datasource.DsInstanceVO;
 import com.baiyi.opscloud.facade.datasource.DsFacade;
@@ -18,7 +18,9 @@ import com.baiyi.opscloud.service.datasource.DsInstanceAssetService;
 import com.baiyi.opscloud.service.datasource.DsInstanceService;
 import com.google.common.collect.Lists;
 import lombok.RequiredArgsConstructor;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -47,9 +49,10 @@ public class DsInstanceAssetFacadeImpl implements DsInstanceAssetFacade {
         DatasourceInstance dsInstance = dsInstanceService.getById(pageQuery.getInstanceId());
         pageQuery.setInstanceUuid(dsInstance.getUuid());
         DataTable<DatasourceInstanceAsset> table = dsInstanceAssetService.queryPageByParam(pageQuery);
-        List<DsAssetVO.Asset> data = BeanCopierUtil.copyListProperties(table.getData(), DsAssetVO.Asset.class).stream().peek(e ->
-                dsAssetPacker.wrap(e, pageQuery, pageQuery)
-        ).collect(Collectors.toList());
+        List<DsAssetVO.Asset> data = BeanCopierUtil.copyListProperties(table.getData(), DsAssetVO.Asset.class)
+                .stream()
+                .peek(e -> dsAssetPacker.wrap(e, pageQuery, pageQuery)
+                ).collect(Collectors.toList());
         return new DataTable<>(data, table.getTotalNum());
     }
 
@@ -68,11 +71,8 @@ public class DsInstanceAssetFacadeImpl implements DsInstanceAssetFacade {
                     .name(username)
                     .build();
             List<DatasourceInstanceAsset> sshKeyAssets = dsInstanceAssetService.queryAssetByAssetParam(asset);
-
-            result.addAll(sshKeyAssets.stream().map(a ->
-                    dsAssetPacker.wrap(i, a)
-            ).collect(Collectors.toList()));
-
+            result.addAll(sshKeyAssets.stream().map(a -> dsAssetPacker.wrap(i, a))
+                    .toList());
         });
         return result;
     }
@@ -83,12 +83,41 @@ public class DsInstanceAssetFacadeImpl implements DsInstanceAssetFacade {
     }
 
     @Override
+    @Async
+    public void deleteAssetByType(int instanceId, String assetType) {
+        DatasourceInstance dsInstance = dsInstanceService.getById(instanceId);
+        if (dsInstance == null) {
+            return;
+        }
+        DsAssetParam.AssetPageQuery pageQuery = DsAssetParam.AssetPageQuery.builder()
+                .instanceUuid(dsInstance.getUuid())
+                .assetType(assetType)
+                .page(1)
+                .length(50)
+                .build();
+        while (true) {
+            DataTable<DatasourceInstanceAsset> table = dsInstanceAssetService.queryPageByParam(pageQuery);
+            if (CollectionUtils.isEmpty(table.getData())) {
+                return;
+            } else {
+                try {
+                    for (DatasourceInstanceAsset asset : table.getData()) {
+                        simpleDsAssetFacade.deleteAssetById(asset.getId());
+                    }
+                } catch (Exception ignored) {
+                }
+            }
+        }
+    }
+
+    @Override
     public void setAssetActiveByAssetId(int assetId) {
         DatasourceInstanceAsset asset = dsInstanceAssetService.getById(assetId);
-        if (asset == null) return;
+        if (asset == null) {
+            return;
+        }
         asset.setIsActive(!asset.getIsActive());
         dsInstanceAssetService.update(asset);
     }
-
 
 }
