@@ -2,11 +2,15 @@ package com.baiyi.opscloud.facade.user.impl;
 
 import com.baiyi.opscloud.common.base.AccessLevel;
 import com.baiyi.opscloud.common.constants.enums.UserCredentialTypeEnum;
-import com.baiyi.opscloud.common.exception.common.CommonRuntimeException;
+import com.baiyi.opscloud.common.exception.common.OCException;
+import com.baiyi.opscloud.common.holder.SessionHolder;
 import com.baiyi.opscloud.common.util.*;
 import com.baiyi.opscloud.domain.DataTable;
 import com.baiyi.opscloud.domain.ErrorEnum;
-import com.baiyi.opscloud.domain.annotation.*;
+import com.baiyi.opscloud.domain.annotation.AssetBusinessRelation;
+import com.baiyi.opscloud.domain.annotation.BusinessType;
+import com.baiyi.opscloud.domain.annotation.RevokeUserPermission;
+import com.baiyi.opscloud.domain.annotation.TagClear;
 import com.baiyi.opscloud.domain.constants.BusinessTypeEnum;
 import com.baiyi.opscloud.domain.constants.DsAssetTypeConstants;
 import com.baiyi.opscloud.domain.generator.opscloud.*;
@@ -15,36 +19,38 @@ import com.baiyi.opscloud.domain.param.SimpleRelation;
 import com.baiyi.opscloud.domain.param.auth.LoginParam;
 import com.baiyi.opscloud.domain.param.server.ServerGroupParam;
 import com.baiyi.opscloud.domain.param.server.ServerParam;
+import com.baiyi.opscloud.domain.param.user.AccessTokenParam;
 import com.baiyi.opscloud.domain.param.user.UserBusinessPermissionParam;
 import com.baiyi.opscloud.domain.param.user.UserParam;
 import com.baiyi.opscloud.domain.vo.datasource.DsAssetVO;
 import com.baiyi.opscloud.domain.vo.server.ServerTreeVO;
 import com.baiyi.opscloud.domain.vo.server.ServerVO;
-import com.baiyi.opscloud.domain.vo.user.AMVO;
+import com.baiyi.opscloud.domain.vo.user.AccessManagementVO;
 import com.baiyi.opscloud.domain.vo.user.AccessTokenVO;
 import com.baiyi.opscloud.domain.vo.user.UserPermissionVO;
 import com.baiyi.opscloud.domain.vo.user.UserVO;
 import com.baiyi.opscloud.domain.vo.user.mfa.MfaVO;
-import com.baiyi.opscloud.facade.auth.maf.MfaAuthHelper;
+import com.baiyi.opscloud.facade.auth.mfa.MfaValidator;
 import com.baiyi.opscloud.facade.server.ServerFacade;
 import com.baiyi.opscloud.facade.server.ServerGroupFacade;
 import com.baiyi.opscloud.facade.user.UserCredentialFacade;
 import com.baiyi.opscloud.facade.user.UserFacade;
 import com.baiyi.opscloud.facade.user.UserPermissionFacade;
 import com.baiyi.opscloud.facade.user.base.IUserBusinessPermissionPageQuery;
-import com.baiyi.opscloud.facade.user.convertor.UserConvertor;
+import com.baiyi.opscloud.facade.user.converter.UserConverter;
 import com.baiyi.opscloud.facade.user.factory.UserBusinessPermissionFactory;
+import com.baiyi.opscloud.facade.user.handler.UserHandler;
 import com.baiyi.opscloud.otp.OtpUtil;
 import com.baiyi.opscloud.packer.datasource.DsAssetPacker;
 import com.baiyi.opscloud.packer.user.UserPacker;
-import com.baiyi.opscloud.packer.user.am.AmPacker;
+import com.baiyi.opscloud.packer.user.am.AccessManagementPacker;
 import com.baiyi.opscloud.service.datasource.DsInstanceAssetService;
 import com.baiyi.opscloud.service.user.*;
 import com.google.common.base.Joiner;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
@@ -52,16 +58,14 @@ import org.springframework.util.CollectionUtils;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static com.baiyi.opscloud.common.config.ThreadPoolTaskConfiguration.TaskPools.CORE;
-
 /**
  * @Author baiyi
  * @Date 2021/5/14 10:38 上午
  * @Version 1.0
  */
-@BusinessType(BusinessTypeEnum.USER)
 @Slf4j
 @Service
+@BusinessType(BusinessTypeEnum.USER)
 @RequiredArgsConstructor
 public class UserFacadeImpl implements UserFacade {
 
@@ -85,13 +89,18 @@ public class UserFacadeImpl implements UserFacade {
 
     private final UserPermissionService userPermissionService;
 
-    private final AmPacker amPacker;
+    private final AccessManagementPacker amPacker;
 
     private final UserCredentialFacade userCredentialFacade;
 
     private final UserCredentialService userCredentialService;
 
-    private final MfaAuthHelper mfaAuthHelper;
+    private final MfaValidator mfaAuthHelper;
+
+    private final UserHandler userHandler;
+
+    // Name & Secret
+    private static final String AWS_QRCODE = "otpauth://totp/Amazon%20Web%20Services:{}?secret={}&issuer=Amazon%20Web%20Services";
 
     @Override
     public DataTable<UserVO.User> queryUserPage(UserParam.UserPageQuery pageQuery) {
@@ -105,17 +114,18 @@ public class UserFacadeImpl implements UserFacade {
 
     @Override
     public UserVO.User getUserDetailsByUsername(String username) {
-        User user = userService.getByUsername(StringUtils.isEmpty(username) ? SessionUtil.getUsername() : username);
+        User user = userService.getByUsername(StringUtils.isEmpty(username) ? SessionHolder.getUsername() : username);
         UserVO.User userVO = BeanCopierUtil.copyProperties(user, UserVO.User.class);
         userPacker.wrap(userVO, SimpleExtend.EXTEND);
         return userVO;
     }
 
-    @Async(value = CORE)
     @Override
     public void syncUserPermissionGroupForAsset() {
         List<User> users = userService.queryAll();
-        if (CollectionUtils.isEmpty(users)) return;
+        if (CollectionUtils.isEmpty(users)) {
+            return;
+        }
         users.forEach(u -> {
             log.info("同步用户 {}", u.getUsername());
             DatasourceInstanceAsset query = DatasourceInstanceAsset.builder()
@@ -124,7 +134,9 @@ public class UserFacadeImpl implements UserFacade {
                     .isActive(true)
                     .build();
             List<DatasourceInstanceAsset> userAssets = dsInstanceAssetService.queryAssetByAssetParam(query);
-            if (CollectionUtils.isEmpty(userAssets)) return;
+            if (CollectionUtils.isEmpty(userAssets)) {
+                return;
+            }
             userAssets.forEach(a -> {
                 DsAssetVO.Asset asset = BeanCopierUtil.copyProperties(a, DsAssetVO.Asset.class);
                 dsAssetPacker.wrap(asset, SimpleExtend.EXTEND, SimpleRelation.RELATION);
@@ -139,7 +151,9 @@ public class UserFacadeImpl implements UserFacade {
 
     private void userPermissionUserGroup(User user, String userGroupName) {
         UserGroup userGroup = userGroupService.getByName(userGroupName);
-        if (userGroup == null) return;
+        if (userGroup == null) {
+            return;
+        }
 
         UserPermission userPermission = UserPermission.builder()
                 .userId(user.getId())
@@ -153,19 +167,16 @@ public class UserFacadeImpl implements UserFacade {
     }
 
     @Override
-    @AssetBusinessRelation // 资产绑定业务对象
-    public UserVO.User addUser(UserVO.User user) {
-        User newUser = UserConvertor.toDO(user);
-//        if (StringUtils.isEmpty(newUser.getPassword()))
-//            throw new CommonRuntimeException("密码不能为空");
-        // 校验用户名
-        RegexUtil.isUsernameRule(newUser.getUsername());
-        newUser.setMfa(false);
-        newUser.setForceMfa(false);
-        userService.add(newUser);
-        user.setId(newUser.getId()); // 给切面提供businessId
-
-        UserVO.User userVO = BeanCopierUtil.copyProperties(user, UserVO.User.class);
+    @AssetBusinessRelation
+    public UserVO.User addUser(UserParam.CreateUser createUser) {
+        User preCreateUser = UserConverter.to(createUser);
+        userService.add(preCreateUser);
+        if (BooleanUtils.isTrue(createUser.getNeedInitializeDefaultConfiguration())) {
+            userHandler.postCreateUserHandle(preCreateUser);
+        }
+        // 给切面提供businessId
+        createUser.setId(preCreateUser.getId());
+        UserVO.User userVO = BeanCopierUtil.copyProperties(createUser, UserVO.User.class);
         userPacker.wrap(userVO, SimpleExtend.EXTEND);
         return userVO;
     }
@@ -173,47 +184,50 @@ public class UserFacadeImpl implements UserFacade {
     /**
      * 此处增强鉴权，只有管理员可以修改其他用户信息，否则只能修改本人信息
      *
-     * @param user
+     * @param updateUser
      */
     @Override
-    public void updateUser(UserVO.User user) {
-        User checkUser = userService.getById(user.getId());
-        if (!checkUser.getUsername().equals(SessionUtil.getUsername())) {
-            int accessLevel = userPermissionFacade.getUserAccessLevel(SessionUtil.getUsername());
-            if (accessLevel < AccessLevel.OPS.getLevel()) {
-                throw new CommonRuntimeException("权限不足:需要管理员才能修改其他用户信息!");
-            }
+    public void updateUser(UserParam.UpdateUser updateUser) {
+        User checkUser = userService.getById(updateUser.getId());
+        if (!checkUser.getUsername().equals(SessionHolder.getUsername())) {
+            int accessLevel = userPermissionFacade.getUserAccessLevel(SessionHolder.getUsername());
+            FunctionUtil.isTure(accessLevel < AccessLevel.OPS.getLevel())
+                    .throwBaseException(new OCException("权限不足: 需要管理员才能修改其他用户信息!"));
         }
-        User updateUser = UserConvertor.toDO(user);
+        User preUpdateUser = UserConverter.to(updateUser);
         updateUser.setUsername(checkUser.getUsername());
-        userService.updateBySelective(updateUser);
+        userService.updateBySelective(preUpdateUser);
     }
 
     @Override
     public void setUserActive(String username) {
         User user = userService.getByUsername(username);
-        if (user.getIsActive()) {
-            userService.setInactive(user);
-        } else {
-            userService.setActive(user);
-        }
+        FunctionUtil.isTureOrFalse(user.getIsActive())
+                .withBoolean(() -> userService.setInactive(user)
+                        , () -> userService.setActive(user));
     }
 
-    @RevokeUserPermission // 撤销用户的所有授权信息
-    @TagClear
+    /**
+     * 撤销用户的所有授权信息
+     *
+     * @param id
+     */
     @Override
+    @TagClear
+    @RevokeUserPermission
     public void deleteUser(Integer id) {
         User user = userService.getById(id);
-        if (user == null) return;
-        if (user.getIsActive()) {
-            throw new CommonRuntimeException("当前用户为活跃状态不能删除！");
+        if (user == null) {
+            return;
         }
+        FunctionUtil.isTure(user.getIsActive())
+                .throwBaseException(new OCException("当前用户为活跃状态不能删除！"));
         userService.delete(user);
     }
 
     @Override
     public ServerTreeVO.ServerTree queryUserServerTree(ServerGroupParam.UserServerTreeQuery queryParam) {
-        User user = userService.getByUsername(SessionUtil.getUsername());
+        User user = userService.getByUsername(SessionHolder.getUsername());
         queryParam.setUserId(user.getId());
         return serverGroupFacade.queryServerTree(queryParam, user);
     }
@@ -221,35 +235,38 @@ public class UserFacadeImpl implements UserFacade {
     @Override
     public DataTable<UserVO.IUserPermission> queryUserBusinessPermissionPage(UserBusinessPermissionParam.UserBusinessPermissionPageQuery pageQuery) {
         IUserBusinessPermissionPageQuery iQuery = UserBusinessPermissionFactory.getByBusinessType(pageQuery.getBusinessType());
-        if (iQuery != null)
+        if (iQuery != null) {
             return iQuery.queryUserBusinessPermissionPage(pageQuery);
-        throw new CommonRuntimeException(ErrorEnum.USER_BUSINESS_TYPE_ERROR);
+        }
+        throw new OCException(ErrorEnum.USER_BUSINESS_TYPE_ERROR);
     }
 
     @Override
     public DataTable<ServerVO.Server> queryUserRemoteServerPage(ServerParam.UserRemoteServerPageQuery queryParam) {
-        User user = userService.getByUsername(SessionUtil.getUsername());
+        User user = userService.getByUsername(SessionHolder.getUsername());
         queryParam.setUserId(user.getId());
         return serverFacade.queryUserRemoteServerPage(queryParam);
     }
 
     @Override
-    public AccessTokenVO.AccessToken grantUserAccessToken(AccessTokenVO.AccessToken accessToken) {
-        AccessToken pre = AccessToken.builder()
-                .username(SessionUtil.getUsername())
+    public AccessTokenVO.AccessToken grantUserAccessToken(AccessTokenParam.ApplicationAccessToken applicationAccessToken) {
+        AccessToken accessToken = AccessToken.builder()
+                .username(SessionHolder.getUsername())
                 .tokenId(IdUtil.buildUUID())
-                .token(PasswordUtil.getRandomPW(32))
-                .expiredTime(accessToken.getExpiredTime())
-                .comment(accessToken.getComment())
+                .token(PasswordUtil.generatorPassword(32, false))
+                .expiredTime(applicationAccessToken.getExpiredTime())
+                .comment(applicationAccessToken.getComment())
                 .build();
-        accessTokenService.add(pre);
-        return BeanCopierUtil.copyProperties(pre, AccessTokenVO.AccessToken.class);
+        accessTokenService.add(accessToken);
+        return BeanCopierUtil.copyProperties(accessToken, AccessTokenVO.AccessToken.class);
     }
 
     @Override
     public void revokeUserAccessToken(String tokenId) {
         AccessToken at = accessTokenService.getByTokenId(tokenId);
-        if (at == null) return;
+        if (at == null) {
+            return;
+        }
         at.setValid(false);
         accessTokenService.update(at);
     }
@@ -270,7 +287,7 @@ public class UserFacadeImpl implements UserFacade {
     }
 
     @Override
-    public List<AMVO.XAM> queryAmsUser(String username, String amType) {
+    public List<AccessManagementVO.XAccessManagement> queryAmsUser(String username, String amType) {
         UserVO.User vo = UserVO.User.builder()
                 .username(username)
                 .build();
@@ -279,18 +296,18 @@ public class UserFacadeImpl implements UserFacade {
 
     @Override
     public UserVO.UserMFA getUserMFA() {
-        String username = SessionUtil.getUsername();
+        String username = SessionHolder.getUsername();
         User user = userService.getByUsername(username);
         return createMfa(user);
     }
 
-    @Transactional(rollbackFor = {CommonRuntimeException.class, Exception.class})
+    @Transactional(rollbackFor = {OCException.class, Exception.class})
     @Override
     public UserVO.UserMFA resetUserMFA() {
-        String username = SessionUtil.getUsername();
+        String username = SessionHolder.getUsername();
         User user = userService.getByUsername(username);
-        if (user.getForceMfa())
-            throw new CommonRuntimeException("MFA无法重置: 管理员强制启用!");
+        FunctionUtil.isTure(user.getForceMfa())
+                .throwBaseException(new OCException("MFA无法重置: 管理员强制启用!"));
         if (user.getMfa()) {
             User userMfa = User.builder()
                     .id(user.getId())
@@ -306,17 +323,39 @@ public class UserFacadeImpl implements UserFacade {
         return createMfa(user);
     }
 
-    @Transactional(rollbackFor = {CommonRuntimeException.class, Exception.class})
+    @Transactional(rollbackFor = {OCException.class, Exception.class})
     @Override
     public UserVO.UserMFA bindUserMFA(String otp) {
-        String username = SessionUtil.getUsername();
+        String username = SessionHolder.getUsername();
         User user = userService.getByUsername(username);
-        if (user.getMfa())
-            throw new CommonRuntimeException("MFA无法绑定: 重复操作!");
+        FunctionUtil.isTure(user.getMfa())
+                .throwBaseException(new OCException("MFA无法绑定: 重复操作!"));
         mfaAuthHelper.verify(user, LoginParam.Login.builder().otp(otp).build());
         user.setMfa(true);
         userService.updateMfa(user);
         return createMfa(user);
+    }
+
+    @Override
+    public UserVO.UserIAMMFA getUserIAMMFA() {
+        String username = SessionHolder.getUsername();
+        User user = userService.getByUsername(username);
+        List<MfaVO.MFA> userMFAs = userCredentialService.queryByUserIdAndType(user.getId(), UserCredentialTypeEnum.IAM_OTP_SK.getType()).stream()
+                .map(e -> {
+                    String name = StringUtils.isNotBlank(e.getComment()) ? e.getComment() : username;
+                    final String qrcode = StringFormatter.arrayFormat(AWS_QRCODE, name, e.getCredential());
+                    return MfaVO.MFA.builder()
+                            .title(e.getTitle())
+                            .secret(e.getCredential())
+                            .username(username)
+                            .qrcode(qrcode)
+                            .build();
+                }).collect(Collectors.toList());
+        return UserVO.UserIAMMFA.builder()
+                .username(username)
+                .mfa(CollectionUtils.isEmpty(userMFAs))
+                .userMfas(userMFAs)
+                .build();
     }
 
     private UserVO.UserMFA createMfa(User user) {
@@ -325,7 +364,7 @@ public class UserFacadeImpl implements UserFacade {
             // 创建用户MFA凭据（不会重复申请）
             userCredentialFacade.createMFACredential(user);
             List<UserCredential> credentials = userCredentialService.queryByUserIdAndType(user.getId(), UserCredentialTypeEnum.OTP_SK.getType());
-            String otpSk = credentials.get(0).getCredential();
+            String otpSk = credentials.getFirst().getCredential();
             mfa = MfaVO.MFA.builder()
                     .username(user.getUsername())
                     .qrcode(OtpUtil.toQRCode(Joiner.on("@").join(user.getUsername(), "opscloud"), otpSk))
@@ -338,7 +377,8 @@ public class UserFacadeImpl implements UserFacade {
         return UserVO.UserMFA.builder()
                 .id(user.getId())
                 .username(user.getUsername())
-                .mfa(user.getMfa()) // 是否启用MFA
+                // 是否启用MFA
+                .mfa(user.getMfa())
                 .forceMfa(user.getForceMfa())
                 .userMfa(mfa)
                 .build();
