@@ -16,9 +16,10 @@
 
 package com.baiyi.opscloud.sshserver.postprocess.provided;
 
-import com.baiyi.opscloud.sshserver.postprocess.PostProcessor;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.baiyi.opscloud.sshserver.postprocess.PostProcessor;
+import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
@@ -28,13 +29,20 @@ import java.util.List;
  * Json pointer post processor
  */
 @Slf4j
-public class JsonPointerPostProcessor implements PostProcessor<String> {
+@AllArgsConstructor
+public class JsonPointerPostProcessor
+        implements PostProcessor<String, String> {
 
-    private static final ObjectMapper MAPPER = new ObjectMapper();
+    private final ObjectMapper mapper;
 
     @Override
     public String getName() {
         return "json";
+    }
+
+    @Override
+    public String getDescription() {
+        return "Json path (use pretty postprocessor first to get json from object)";
     }
 
     @Override
@@ -45,16 +53,16 @@ public class JsonPointerPostProcessor implements PostProcessor<String> {
             if (parameters.size() != 1) {
                 log.debug("[{}] post processor only need one parameter, rest will be ignored", getName());
             }
-            String path = parameters.get(0);
+            String path = parameters.getFirst();
             try {
-                JsonNode node = MAPPER.readTree(result).at(path);
+                JsonNode node = mapper.readTree(result).at(path);
                 if (node.isMissingNode()) {
                     return "No node found with json path expression: " + path;
                 } else {
                     if (node.isTextual()) {
                         return node.asText();
                     } else {
-                        return MAPPER.writerWithDefaultPrettyPrinter().writeValueAsString(node);
+                        return mapper.writerWithDefaultPrettyPrinter().writeValueAsString(node);
                     }
                 }
             } catch (IOException e) {
@@ -66,4 +74,5 @@ public class JsonPointerPostProcessor implements PostProcessor<String> {
         }
         return result;
     }
+
 }
